add outlet product
